# wd-wordcounter

./: .gitignore  Cargo.toml  LICENSE  README.md  WD.py  WD.spec  __init__.py  build.rs  build_exe.py  hook-src.py  installer.nsi  pyproject.toml  requirements.txt  run.bat  setup.py  wdlib.pyd
assets/: create_icon.py  create_pixel_icon.py  theme.json
src/: export_manager.py  lib.rs  theme_manager.py  ui_mainwindow.py
