[package]
name = "wd-backend"
version = "1.0.0"
edition = "2021"

[lib]
name = "wdlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
libc = "0.2"
once_cell = "1.18"

[build-dependencies]
cc = "1.0"